src/main/webapp/resources/css/structure.css
/* ... */
#navbarFixed .label.beta {display:block; float:left; margin-top:16px; font-size:100%;}

#navbarFixed .dropdown.accountName .label.label-danger {margin-left:.5em;}
#navbarFixed .dropdown.accountName .logout form {margin:0; padding:0; width:100%;}
#navbarFixed .dropdown.accountName .logout a {clear: both; color: #333333; display: block; font-weight: normal; line-height: 1.42857; padding: 3px 20px; white-space: nowrap; text-decoration: none;}
#navbarFixed .dropdown.accountName .logout a:hover, #navbarFixed .dropdown.accountName .logout a:focus {background-color: #E8E8E8; background-image: linear-gradient(to bottom, #F5F5F5 0px, #E8E8E8 100%); background-repeat: repeat-x; color: #262626; outline: 0; text-decoration: none;}

.panelLayoutBlock, .panelLayoutTitleBlock, .panelLayoutButtonBlock {border:0;}
.panelLayoutBlock .ui-panelgrid.panelgridLayoutTable .ui-widget-content, .panelLayoutBlock .ui-panelgrid.panelgridLayoutTable .ui-widget-content > td {border:0;}

.panelgridLayoutTable, .panelgridFormTable {width:100%;}
.panelgridFormTable > tbody > tr.ui-widget-content > td:first-child {width:20%;}

.panelLayoutButtonBlock button {margin-right:2em;}

.panelLayoutBlock > .ui-widget-content {border-bottom:1px solid #DDDDDD;}
.panelLayoutBlock.breadcrumbNavBlock > .ui-widget-content {border-bottom:0;}
.panelLayoutTitleBlock > .ui-widget-content {border:0;}

.panelLayoutBlock .ui-panelgrid.panelgridLayoutTable .ui-widget-content .ui-panelgrid {margin-bottom: 1em;}
.panelLayoutBlock .ui-panelgrid.panelgridLayoutTable .ui-widget-content .ui-panelgrid .ui-widget-content .ui-panelgrid {margin-bottom: 0}
.panelLayoutBlock .ui-panelgrid.panelgridLayoutTable .ui-widget-content .ui-panelgrid .ui-widget-content .ui-panelgrid td:first-child {padding-left:0;}

button.btn.dropdown-toggle span.glyphicon {margin-right:.3em;}

.messagePanel {margin-top:1em; font-size: 1em;}
.messagePanel .glyphicon {font-size: 1.5em; vertical-align: bottom;}

.highlightBold {font-weight:bold;}

#footer {padding-bottom:4em;}

/* -------- HEADER -------- */
#dataverseHeader {margin:0 auto .5em auto; background:#F5F5F5;}
#dataverseHeader .dataverseHeaderBlock {display:table-row;}
#dataverseHeader .dataverseHeaderCell {display:table-cell;}
#dataverseHeader .dataverseHeaderLogo {text-align:center;}
#dataverseHeader .dataverseHeaderName {padding:2em 1em;}
#dataverseHeader .dataverseHeaderTagline {padding-left:2em; font-size:1.3em;}
#dataverseHeader .dataverseHeaderLink {padding-left:2em;}

/* -------- BREADCRUMBS -------- */
#breadcrumbNavBlock .breadcrumbBlock {float:left; position:relative;}
#breadcrumbNavBlock .breadcrumbActive {font-weight:bold;}
#breadcrumbNavBlock a[id^='breadcrumbLnkTree'] {cursor: pointer; cursor: hand;}
#breadcrumbNavBlock a[id^='breadcrumbLnkTree'] span.glyphicon-chevron-down {vertical-align:middle;padding-bottom:2px;}

#breadcrumbNavBlock > .ui-panel-content {overflow:hidden;}
        
#breadcrumbNavBlock.panelLayoutBlock > .ui-widget-content {border-bottom: 0;}

#breadcrumbNavBlock .breadcrumbCarrot {float:left; margin:0 .4em 0 .8em; color:#B3B3B3;}

#breadcrumbNavBlock div.dropdown-menu {padding-right:.5em; min-width:280px;}

#breadcrumbNavBlock .ui-tree {width: auto;}

#breadcrumbNavBlock div.ui-tree.ui-widget-content {border:0;}
#breadcrumbNavBlock div.ui-tree.ui-widget-content span.ui-treenode-content span.ui-icon.ui-tree-toggler {background-size: auto 284px; height:20px; width:20px;}
#breadcrumbNavBlock div.ui-tree.ui-widget-content span.ui-treenode-content span.ui-icon.ui-tree-toggler.ui-icon-triangle-1-s {background-position: -72px -16px;}
#breadcrumbNavBlock div.ui-tree.ui-widget-content span.ui-treenode-content span.ui-icon.ui-tree-toggler.ui-icon-triangle-1-e {background-position: -35px -16px;}

/* -------- DATAVERSE -------- */
form[id$='dataverseForm'] .panelLayoutBlock .form-horizontal table.ui-panelgrid.ui-widget,
form[id$='dataverseForm'] .panelLayoutBlock .form-horizontal table.ui-panelgrid.ui-widget tr, 
form[id$='dataverseForm'] .panelLayoutBlock .form-horizontal table.ui-panelgrid.ui-widget td {border:0;}

form[id$='dataverseForm'] .panelLayoutBlock .form-horizontal div.form-group {vertical-align: middle;}

div.ui-chkbox.metadata-blocks-default div.ui-chkbox-box {margin: 4px 10px;}
div.ui-chkbox.metadata-blocks-default span.ui-chkbox-label {margin: 1px 10px 4px 10px;}

table.ui-selectmanycheckbox.metadata-blocks-select label {font-weight:normal; margin-top:1px;}
table.ui-selectmanycheckbox.metadata-blocks-select label.ui-state-disabled {background:inherit;}

/* -------- SEARCH -------- */
.panelLayoutBlock.panelSerchForm > .ui-widget-content {border:0;padding:0;}
.panelLayoutBlock.panelSerchForm input.ui-inputfield {margin-right:1em;}
.panelLayoutBlock.panelSerchForm a[id$='searchbutton'] {color:black;font-size:.9em;}
.panelLayoutBlock.panelSerchForm a[id$='searchbutton'] span.glyphicon {margin-right:.3em;}
.panelLayoutBlock.panelSerchForm a[id$='advsearchlink'] {margin-left:1em;}

#dv-sidecolumn {width:20%;float:left;padding-right:1em;}
#dv-maincolumn {width:80%;float:left;}

.searchTypeButton {display:block; border:1px solid #DDD; padding:4px 0; margin-bottom: .5em;}

/*#resultsCountPaginatorBlock {overflow:hidden;}*/
#resultsCountPaginatorBlock div.results-count {width:25%; padding: 6px 12px; margin-top: 1px; font-weight:bold;}
#resultsCountPaginatorBlock div.results-sort-pagination {width:70%; text-align:right;}
#resultsCountPaginatorBlock .pagination {margin:0;}

span.search-term-match {font-weight: bold;}
div[id$='resultsTable'] div.ui-datatable-tablewrapper table td > div {clear:left; margin-bottom: .5em;}
div[id$='resultsTable'] div.ui-datatable-tablewrapper table td > div > span.label {margin-left:.5em;}
div[id$='resultsTable'] .resultDatasetCitationBlock {display:block;margin:4px 0 .5em 60px;background:#FCFCE2;padding:4px;}
div[id$='resultsTable'] .resultDatasetCitationBlock span.search-term-match {font-weight: normal;}
/* ... */

